src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-using-impl-items.nll.stderr
error: lifetime may not live long enough
  --> $DIR/ex3-both-anon-regions-using-impl-items.rs:6:9
   |
LL |     fn foo(x: &mut Vec<&u8>, y: &u8) {
   |                        -        - let's call the lifetime of this reference `'1`
   |                        |
   |                        let's call the lifetime of this reference `'2`
LL |         x.push(y);
   |         ^^^^^^^^^ argument requires that `'1` must outlive `'2`

error: aborting due to previous error

